--- a/numpymain.tex
+++ b/numpymain.tex
@@ -47,6 +47,14 @@
 
 \large
 \tableofcontents
+NumPy is the fundamental package for scientific computing with Python. It contains among other things:
+\begin{itemize}
+\item a powerful N-dimensional array object
+\item sophisticated (broadcasting) functions
+\item tools for integrating C/C++ and Fortran code
+\item useful linear algebra, Fourier transform, and random number capabilities
+\item Besides its obvious scientific uses, NumPy can also be used as an efficient multi-dimensional container of generic data.  -Arbitrary data-types can be defined. This allows NumPy to seamlessly and speedily integrate with a wide variety of databases.
+\end{itemize}
 \subfile{numpy1-intro}
 \subfile{numpy2-arrays}
 \subfile{numpy3-basicmaths}
