--- a/numpy2-array.tex
+++ b/numpy2-array.tex
@@ -14,7 +14,8 @@ import numpy as np
 \end{framed}
 
 \subsection{Indexing and Slicing}
-Indexing some single value or even a whole set of values from a given array is the next important operation we need to learn about.
+Indexing some single value or even a whole set of values from a given array is the next important operation #we need to learn about.
 
-Indexing for retrieving single elements works as usual in python and indexing by negative numbers starts counting from the end:
+Indexing for retrieving single elements works as usual in python and indexing by negative numbers starts 
+counting from the end:
 \end{document}
