--- a/ArraysWithNumPy.tex
+++ b/ArraysWithNumPy.tex
@@ -49,10 +49,26 @@ array([[ 7,  3,  0],
        [12,  4,  8]])
 >>> 
 
+
+
+
+
+%===================================================================%
+
+\begin{itemize}
+\item
+\item
+\end{itemize}
+
+%===================================================================%
 Axis eines Arrays
 
 The "shape" of an array denotes a tuple with the number of elements per axis (dimension) In our example in the picture, the shape is equal to (6,3), i.e. we have 6 lines and 3 columns. 
 We can work with arrays like we are used to work with lists: 
+
+%================================================================%
+\begin{framed}
+\begin{verbatim}
 >>> x = np.array([42,47,11])
 >>> x[:2]
 array([42, 47])
@@ -65,7 +81,9 @@ array([42, 47])
 >>> x
 array([42, 49, 11])
 >>>
-
+\end{verbatim}
+\end{framed}
+%================================================================%
 Axis eines Arrays
 
 The following example shows a 2-dimensional float array:
@@ -91,6 +109,8 @@ The attribut dtype contains the type of an array:
 >>> x.dtype
 dtype('float64')
 float64 is a numerical data type of NumPy, which stores numbers in double precision, similar to float in Python.
+
+%================================================================%
 Reshaping Arrays
 
 There are two methods to flatten a multidimensional array:
@@ -133,6 +153,7 @@ array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16,
        17, 18, 19, 20, 21, 22, 23])
 The order of the elements in the array returned by ravel() is normally "C-style", i.e. the rightmost index "changes the fastest" or in other words: In row-major order, the row index varies the slowest, and the column index the quickest, so that a[0,1] follows [0,0]. 
 
+%================================================================%
 The method reshape() gives a new shape to an array without changing its data, i.e. it returns a new array with a new shape.
 >>> x = np.array(range(24))
 >>> y = x.reshape((3,4,2))
@@ -159,6 +180,9 @@ We show in the following example, how we can use slices to cut away the "border"
 >>> x = np.array(range(100))
 >>> y = x.reshape(10,10)
 >>> y[1:-1,1:-1]
+
+%================================================================%
+
 Concatenating Arrays
 
 In the following example we concatenate three one-dimensional arrays to one array. The elements of the second array are appended to the first array. After this the elements of the third array are appended:
@@ -249,6 +273,8 @@ array([[[  0,   1, 100, 101],
         [ 20,  21, 120, 121],
         [ 22,  23, 122, 123]]])
 >>> 
+
+%================================================================%
 Adding New Dimensions
 
 New dimensions can be added to an array by using slicing and np.newaxis. We illustrate this technique with an example:
@@ -263,9 +289,12 @@ array([[ 2],
        [14],
        [ 4]])
 
-Initializing Arrays with Ones and Zeros
+%================================================================%
+\subsection{Initializing Arrays with Ones and Zeros}
 
 There are two ways of initializing Arrays with Zeros or Ones. The method ones(t) takes a tuple t with the shape of the array and fills the array accordingly with ones. By default it will be filled with Ones of type float. If you need integer Ones, you have to set the optional parameter dtype to int:
+\begin{framed}
+\begin{verbatim}
 >>> np.ones((2,3))
 array([[ 1.,  1.,  1.],
        [ 1.,  1.,  1.]])
@@ -273,10 +302,15 @@ array([[ 1.,  1.,  1.],
 array([[1, 1, 1, 1],
        [1, 1, 1, 1],
        [1, 1, 1, 1]])
+\end{verbatim}
+\end{framed}
+%================================================================%
 What we have said about the method ones() is valid for the method zeros() analogously, as we can see in the following example:
 >>> np.zeros((2,4))
 array([[ 0.,  0.,  0.,  0.],
        [ 0.,  0.,  0.,  0.]])
+
+%================================================================%
 There is another interesting way to create a matrix with Ones or a matrix with Zeros, if it has to have the same shape as another existing array. Numpy supplies for this purpose the methods ones_like(a) and zeros_like(a).
 >>> x = np.array([2,5,18,14,4])
 >>> np.ones_like(x)
@@ -284,7 +318,8 @@ array([1, 1, 1, 1, 1])
 >>> np.zeros_like(x)
 array([0, 0, 0, 0, 0])
 
-<newpage
+%================================================================%
+\newpage
 
 
 Numpy's array class is called ndarray. It is also known by the alias array. Note that numpy.array is not the same as the Standard Python Library class array.array, which only handles one-dimensional arrays and offers less functionality. The more important attributes of an ndarray object are:
@@ -361,6 +396,8 @@ array([[ 1.+0.j,  2.+0.j],
        [ 3.+0.j,  4.+0.j]])
 \end{verbatim}
 Often, the elements of an array are originally unknown, but its size is known. Hence, NumPy offers several functions to create arrays with initial placeholder content. These minimize the necessity of growing arrays, an expensive operation.
+
+%================================================================%
 The function zeros creates an array full of zeros, the function ones creates an array full of ones, and the function empty creates an array whose initial content is random and depends on the state of the memory. By default, the dtype of the created array is float64.
 \begin{verbatim}
 >>> zeros( (3,4) )
@@ -384,6 +421,8 @@ array([10, 15, 20, 25])
 >>> arange( 0, 2, 0.3 )                 # it accepts float arguments
 array([ 0. ,  0.3,  0.6,  0.9,  1.2,  1.5,  1.8])
 When arange is used with floating point arguments, it is generally not possible to predict the number of elements obtained, due to the finite floating point precision. For this reason, it is usually better to use the function linspace that receives as an argument the number of elements that we want, instead of the step:
+
+%================================================================%
 \begin{verbatim}
 >>> linspace( 0, 2, 9 )                 # 9 numbers from 0 to 2
 array([ 0.  ,  0.25,  0.5 ,  0.75,  1.  ,  1.25,  1.5 ,  1.75,  2.  ])
@@ -393,6 +432,8 @@ array([ 0.  ,  0.25,  0.5 ,  0.75,  1.  ,  1.25,  1.5 ,  1.75,  2.  ])
 \textit{See also
 array, zeros, zeros_like, ones, ones_like, empty, empty_like, arange, linspace, rand, randn, fromfunction, fromfile}
 \newpage
+
+%================================================================%
 \section{Printing Arrays}
 When you print an array, NumPy displays it in a similar way to nested lists, but with the following layout:
 the last axis is printed from left to right,
