--- a/07-Characters/index.tex
+++ b/07-Characters/index.tex
@@ -4,20 +4,36 @@ numpy.char is the preferred alias for numpy.core.defchararray.
 
 core.defchararray.array(obj[, itemsize, ...])	Create a chararray.
 core.defchararray.asarray(obj[, itemsize, ...])	Convert the input to a chararray, copying the data only if necessary.
-Numerical ranges
-arange([start,] stop[, step,][, dtype])	Return evenly spaced values within a given interval.
-linspace(start, stop[, num, endpoint, ...])	Return evenly spaced numbers over a specified interval.
-logspace(start, stop[, num, endpoint, base, ...])	Return numbers spaced evenly on a log scale.
-meshgrid(*xi, **kwargs)	Return coordinate matrices from coordinate vectors.
-mgrid	nd_grid instance which returns a dense multi-dimensional “meshgrid”.
-ogrid	nd_grid instance which returns an open multi-dimensional “meshgrid”.
-Building matrices
-diag(v[, k])	Extract a diagonal or construct a diagonal array.
-diagflat(v[, k])	Create a two-dimensional array with the flattened input as a diagonal.
-tri(N[, M, k, dtype])	An array with ones at and below the given diagonal and zeros elsewhere.
-tril(m[, k])	Lower triangle of an array.
-triu(m[, k])	Upper triangle of an array.
-vander(x[, N, increasing])	Generate a Vandermonde matrix.
-The Matrix class
-mat(data[, dtype])	Interpret the input as a matrix.
-bmat(obj[, ldict, gdict])	Build a matrix object from a string, nested sequence, or array.
+String operations
+
+This module provides a set of vectorized string operations for arrays of type numpy.string_ or numpy.unicode_. All of them are based on the string methods in the Python standard library.
+
+%==========================================================================================%
+\newpage
+\section*{String operations}
+
+add(x1, x2)	Return element-wise string concatenation for two arrays of str or unicode.
+multiply(a, i)	Return (a * i), that is string multiple concatenation, element-wise.
+mod(a, values)	Return (a % i), that is pre-Python 2.6 string formatting (iterpolation), element-wise for a pair of array_likes of str or unicode.
+capitalize(a)	Return a copy of a with only the first character of each element capitalized.
+center(a, width[, fillchar])	Return a copy of a with its elements centered in a string of length width.
+decode(a[, encoding, errors])	Calls str.decode element-wise.
+encode(a[, encoding, errors])	Calls str.encode element-wise.
+join(sep, seq)	Return a string which is the concatenation of the strings in the sequence seq.
+ljust(a, width[, fillchar])	Return an array with the elements of a left-justified in a string of length width.
+lower(a)	Return an array with the elements converted to lowercase.
+lstrip(a[, chars])	For each element in a, return a copy with the leading characters removed.
+partition(a, sep)	Partition each element in a around sep.
+replace(a, old, new[, count])	For each element in a, return a copy of the string with all occurrences of substring old replaced by new.
+rjust(a, width[, fillchar])	Return an array with the elements of a right-justified in a string of length width.
+rpartition(a, sep)	Partition (split) each element around the right-most separator.
+rsplit(a[, sep, maxsplit])	For each element in a, return a list of the words in the string, using sep as the delimiter string.
+rstrip(a[, chars])	For each element in a, return a copy with the trailing characters removed.
+split(a[, sep, maxsplit])	For each element in a, return a list of the words in the string, using sep as the delimiter string.
+splitlines(a[, keepends])	For each element in a, return a list of the lines in the element, breaking at line boundaries.
+strip(a[, chars])	For each element in a, return a copy with the leading and trailing characters removed.
+swapcase(a)	Return element-wise a copy of the string with uppercase characters converted to lowercase and vice versa.
+title(a)	Return element-wise title cased version of string or unicode.
+translate(a, table[, deletechars])	For each element in a, return a copy of the string where all characters occurring in the optional argument deletechars are removed, and the remaining characters have been mapped through the given translation table.
+upper(a)	Return an array with the elements converted to uppercase.
+zfill(a, width)	Return the numeric string left-filled with zeros Calls str.zfill element-wise.
