--- a/07-Characters/index.tex
+++ b/07-Characters/index.tex
@@ -1,4 +1,4 @@
-Creating character arrays (numpy.char)
+\section*{Creating character arrays (numpy.char)}
 Note
 numpy.char is the preferred alias for numpy.core.defchararray.
 
@@ -29,6 +29,7 @@ rjust(a, width[, fillchar])	Return an array with the elements of a right-justifi
 rpartition(a, sep)	Partition (split) each element around the right-most separator.
 rsplit(a[, sep, maxsplit])	For each element in a, return a list of the words in the string, using sep as the delimiter string.
 rstrip(a[, chars])	For each element in a, return a copy with the trailing characters removed.
+
 split(a[, sep, maxsplit])	For each element in a, return a list of the words in the string, using sep as the delimiter string.
 splitlines(a[, keepends])	For each element in a, return a list of the lines in the element, breaking at line boundaries.
 strip(a[, chars])	For each element in a, return a copy with the leading and trailing characters removed.
