--- a/ArraysWithNumPy.tex
+++ b/ArraysWithNumPy.tex
@@ -1,4 +1,4 @@
-\section{Arrays in NumPy}
+###Arrays in NumPy}
 % - http://www.python-course.eu/numpy.php
 Arrays constitute the central component of the module NumPy. 
 The main difference to standard Python lists consists in the fact that the elements of a NumPy array have to be of the same type, usually float or int. NumPy arrays are by far more efficient the lists of Python. Principially, an array can be seen like a list with the following differences:
@@ -15,46 +15,46 @@ $ array([42, 47, 11])
 
 %================================================================%
 The array method transforms sequences of sequences into two dimensional arrays.
->>> x = np.array( ((11,12,13), (21,22,23), (31,32,33)) )
->>> print x
+ x = np.array( ((11,12,13), (21,22,23), (31,32,33)) )
+ print x
 [[11 12 13]
  [21 22 23]
  [31 32 33]]
->>> 
+ 
 
 %================================================================%
 Correspondingly, it converts sequences of sequences of sequences into three dimensional arrays:
->>> x = np.array( ( ((111,112), (121,122) ), ((211,212),(221,222)) ) )
->>> print x
+ x = np.array( ( ((111,112), (121,122) ), ((211,212),(221,222)) ) )
+ print x
 [[[111 112]
   [121 122]]
 
  [[211 212]
   [221 222]]]
->>> print x[1][0][1]
+ print x[1][0][1]
 212
->>> print x[1][1][1]
+ print x[1][1][1]
 222
->>> 
+ 
 
 %================================================================%
 The attribute \texttt{ndim} tells us the number of dimensions of an array:
->>> x = np.array( ((11,12,13), (21,22,23) ))
->>> x.ndim
+ x = np.array( ((11,12,13), (21,22,23) ))
+ x.ndim
 2
 %================================================================%
 The method shape() gives us the dimensions:
->>> x = np.array( ((7,3,0), (7,11,9), (15,3,7),(12,4,8)  ))
->>> x.ndim
+ x = np.array( ((7,3,0), (7,11,9), (15,3,7),(12,4,8)  ))
+ x.ndim
 2
->>> x.shape
+ x.shape
 (4, 3)
->>> x
+ x
 array([[ 7,  3,  0],
        [ 7, 11,  9],
        [15,  3,  7],
        [12,  4,  8]])
->>> 
+ 
 
 
 
@@ -76,43 +76,43 @@ We can work with arrays like we are used to work with lists:
 %================================================================%
 \begin{framed}
 \begin{verbatim}
->>> x = np.array([42,47,11])
->>> x[:2]
+ x = np.array([42,47,11])
+ x[:2]
 array([42, 47])
->>> x = np.array([42,47,11])
->>> x[0]
+ x = np.array([42,47,11])
+ x[0]
 42
->>> x[:2]
+ x[:2]
 array([42, 47])
->>> x[1] = 49
->>> x
+ x[1] = 49
+ x
 array([42, 49, 11])
->>>
+
 \end{verbatim}
 \end{framed}
 %================================================================%
 Axis eines Arrays
 
 The following example shows a 2-dimensional float array:
->>> x = np.array([[0.314, 0.5,17],[1.4142,0.67, 7]], float)
->>> x[0]
+ x = np.array([[0.314, 0.5,17],[1.4142,0.67, 7]], float)
+ x[0]
 array([  0.314,   0.5  ,  17.   ])
->>> x[1]
+ x[1]
 array([ 1.4142,  0.67  ,  7.    ])
->>> x[0,2]
+ x[0,2]
 17.0
->>>
+
 
 We can use slices with 2-dimensional arrays as well:
 \begin{framed}
 \begin{verbatim}
->>> x[:,0]
+ x[:,0]
 array([ 0.314 ,  1.4142])
->>> x[:,1]
+ x[:,1]
 array([ 0.5 ,  0.67])
->>> x[:,2]
+ x[:,2]
 array([ 17.,   7.])
->>> 
+ 
 \end{verbatim}
 \end{framed}
 %================================================================%
@@ -120,7 +120,7 @@ array([ 17.,   7.])
 The attribute \texttt{dtype} contains the type of an array:
 \begin{framed}
 \begin{verbatim}
->>> x.dtype
+ x.dtype
 dtype('float64')
 \end{verbatim}
 \end{framed}
@@ -134,7 +134,7 @@ flatten()
 ravel()
 \begin{framed}
 \begin{verbatim}
->>> x = np.array([[[ 0,  1],
+ x = np.array([[[ 0,  1],
 ...         [ 2,  3],
 ...         [ 4,  5],
 ...         [ 6,  7]],
@@ -148,10 +148,10 @@ ravel()
 ...         [18, 19],
 ...         [20, 21],
 ...         [22, 23]]])
->>> x.flatten()
+ x.flatten()
 array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16,
        17, 18, 19, 20, 21, 22, 23])
->>> x
+ x
 array([[[ 0,  1],
         [ 2,  3],
         [ 4,  5],
@@ -166,7 +166,7 @@ array([[[ 0,  1],
         [18, 19],
         [20, 21],
         [22, 23]]])
->>> x.ravel()
+ x.ravel()
 array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16,
        17, 18, 19, 20, 21, 22, 23])
 The order of the elements in the array returned by ravel() is normally "C-style", i.e. the rightmost index "changes the fastest" or in other words: In row-major order, the row index varies the slowest, and the column index the quickest, so that a[0,1] follows [0,0]. 
@@ -175,9 +175,9 @@ The order of the elements in the array returned by ravel() is normally "C-style"
 The method reshape() gives a new shape to an array without changing its data, i.e. it returns a new array with a new shape.
 \begin{framed}
 \begin{verbatim}
->>> x = np.array(range(24))
->>> y = x.reshape((3,4,2))
->>> y
+ x = np.array(range(24))
+ y = x.reshape((3,4,2))
+ y
 array([[[ 0,  1],
         [ 2,  3],
         [ 4,  5],
@@ -192,32 +192,32 @@ array([[[ 0,  1],
         [18, 19],
         [20, 21],
         [22, 23]]])
->>> x
+ x
 array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16,
        17, 18, 19, 20, 21, 22, 23])
->>> 
+ 
 We show in the following example, how we can use slices to cut away the "border" of an array, i.e. the first and last column and the first and last row of the array:
->>> x = np.array(range(100))
->>> y = x.reshape(10,10)
->>> y[1:-1,1:-1]
+ x = np.array(range(100))
+ y = x.reshape(10,10)
+ y[1:-1,1:-1]
 
 %================================================================%
 
 Concatenating Arrays
 
 In the following example we concatenate three one-dimensional arrays to one array. The elements of the second array are appended to the first array. After this the elements of the third array are appended:
->>> x = np.array([11,22])
->>> y = np.array([18,7,6])
->>> z = np.array([1,3,5])
->>> np.concatenate((x,y,z))
+ x = np.array([11,22])
+ y = np.array([18,7,6])
+ z = np.array([1,3,5])
+ np.concatenate((x,y,z))
 array([11, 22, 18,  7,  6,  1,  3,  5])
 If we are concatenating multidimensional arrays, we can concatenate the arrays according to axis. Arrays must have the same shape to be concatenated with concatenate(). In the case of multidimensional arrays, we can arrange them according to the axis. The default value is axis = 0:
->>> x = np.array(range(24))
->>> x = x.reshape((3,4,2))
->>> y = np.array(range(100,124))
->>> y = y.reshape((3,4,2))
->>> z = np.concatenate((x,y))
->>> z
+ x = np.array(range(24))
+ x = x.reshape((3,4,2))
+ y = np.array(range(100,124))
+ y = y.reshape((3,4,2))
+ z = np.concatenate((x,y))
+ z
 array([[[  0,   1],
         [  2,   3],
         [  4,   5],
@@ -247,9 +247,9 @@ array([[[  0,   1],
         [118, 119],
         [120, 121],
         [122, 123]]])
->>> 
->>> z = np.concatenate((x,y),axis = 1)
->>> z
+ 
+ z = np.concatenate((x,y),axis = 1)
+ z
 array([[[  0,   1],
         [  2,   3],
         [  4,   5],
@@ -276,8 +276,8 @@ array([[[  0,   1],
         [118, 119],
         [120, 121],
         [122, 123]]])
->>> z = np.concatenate((x,y),axis = 2)
->>> z
+ z = np.concatenate((x,y),axis = 2)
+ z
 array([[[  0,   1, 100, 101],
         [  2,   3, 102, 103],
         [  4,   5, 104, 105],
@@ -292,17 +292,17 @@ array([[[  0,   1, 100, 101],
         [ 18,  19, 118, 119],
         [ 20,  21, 120, 121],
         [ 22,  23, 122, 123]]])
->>> 
+ 
 
 %================================================================%
 Adding New Dimensions
 
 New dimensions can be added to an array by using slicing and np.newaxis. We illustrate this technique with an example:
->>> x = np.array([2,5,18,14,4])
->>> x
+ x = np.array([2,5,18,14,4])
+ x
 array([ 2,  5, 18, 14,  4])
->>> y = x[:, np.newaxis]
->>> y
+ y = x[:, np.newaxis]
+ y
 array([[ 2],
        [ 5],
        [18],
@@ -315,10 +315,10 @@ array([[ 2],
 There are two ways of initializing Arrays with Zeros or Ones. The method ones(t) takes a tuple t with the shape of the array and fills the array accordingly with ones. By default it will be filled with Ones of type float. If you need integer Ones, you have to set the optional parameter dtype to int:
 \begin{framed}
 \begin{verbatim}
->>> np.ones((2,3))
+ np.ones((2,3))
 array([[ 1.,  1.,  1.],
        [ 1.,  1.,  1.]])
->>> np.ones((3,4),dtype=int)
+ np.ones((3,4),dtype=int)
 array([[1, 1, 1, 1],
        [1, 1, 1, 1],
        [1, 1, 1, 1]])
@@ -326,20 +326,20 @@ array([[1, 1, 1, 1],
 \end{framed}
 %================================================================%
 What we have said about the method ones() is valid for the method zeros() analogously, as we can see in the following example:
->>> np.zeros((2,4))
+ np.zeros((2,4))
 array([[ 0.,  0.,  0.,  0.],
        [ 0.,  0.,  0.,  0.]])
 
 %================================================================%
 There is another interesting way to create a matrix with Ones or a matrix with Zeros, if it has to have the same shape as another existing array. Numpy supplies for this purpose the methods ones_like(a) and zeros_like(a).
->>> x = np.array([2,5,18,14,4])
->>> np.ones_like(x)
+ x = np.array([2,5,18,14,4])
+ np.ones_like(x)
 array([1, 1, 1, 1, 1])
->>> np.zeros_like(x)
+ np.zeros_like(x)
 array([0, 0, 0, 0, 0])
 
 %================================================================%
-\newpage
+
 
 
 Numpy's array class is called ndarray. It is also known by the alias array. Note that numpy.array is not the same as the Standard Python Library class array.array, which only handles one-dimensional arrays and offers less functionality. The more important attributes of an ndarray object are:
@@ -357,28 +357,28 @@ ndarray.data
 the buffer containing the actual elements of the array. Normally, we won't need to use this attribute because we will access the elements in an array using indexing facilities.
 An example
 \begin{verbatim}
->>> from numpy  import *
->>> a = arange(15).reshape(3, 5)
->>> a
+ from numpy  import *
+ a = arange(15).reshape(3, 5)
+ a
 array([[ 0,  1,  2,  3,  4],
        [ 5,  6,  7,  8,  9],
        [10, 11, 12, 13, 14]])
->>> a.shape
+ a.shape
 (3, 5)
->>> a.ndim
+ a.ndim
 2
->>> a.dtype.name
+ a.dtype.name
 'int32'
->>> a.itemsize
+ a.itemsize
 4
->>> a.size
+ a.size
 15
->>> type(a)
+ type(a)
 numpy.ndarray
->>> b = array([6, 7, 8])
->>> b
+ b = array([6, 7, 8])
+ b
 array([6, 7, 8])
->>> type(b)
+ type(b)
 numpy.ndarray
 \end{verbatim}
 %-----------------------------------------------------------------------------------%
@@ -386,32 +386,32 @@ numpy.ndarray
 There are several ways to create arrays.
 For example, you can create an array from a regular Python list or tuple using the array function. The type of the resulting array is deduced from the type of the elements in the sequences.
 \begin{verbatim}
->>> from numpy  import *
->>> a = array( [2,3,4] )
->>> a
+ from numpy  import *
+ a = array( [2,3,4] )
+ a
 array([2, 3, 4])
->>> a.dtype
+ a.dtype
 dtype('int32')
->>> b = array([1.2, 3.5, 5.1])
->>> b.dtype
+ b = array([1.2, 3.5, 5.1])
+ b.dtype
 dtype('float64')
 \end{verbatim}
 %-------------------------------------------------------------------------------------%
 A frequent error consists in calling array with multiple numeric arguments, rather than providing a single list of numbers as an argument.
->>> a = array(1,2,3,4)    # WRONG
+ a = array(1,2,3,4)    # WRONG
 
->>> a = array([1,2,3,4])  # RIGHT
+ a = array([1,2,3,4])  # RIGHT
 array transforms sequences of sequences into two-dimensional arrays, sequences of sequences of sequences into three-dimensional arrays, and so on.
 \begin{verbatim}
->>> b = array( [ (1.5,2,3), (4,5,6) ] )
->>> b
+ b = array( [ (1.5,2,3), (4,5,6) ] )
+ b
 array([[ 1.5,  2. ,  3. ],
        [ 4. ,  5. ,  6. ]])
 \end{verbatim}
 The type of the array can also be explicitly specified at creation time:
 \begin{verbatim}
->>> c = array( [ [1,2], [3,4] ], dtype=complex )
->>> c
+ c = array( [ [1,2], [3,4] ], dtype=complex )
+ c
 array([[ 1.+0.j,  2.+0.j],
        [ 3.+0.j,  4.+0.j]])
 \end{verbatim}
@@ -420,60 +420,60 @@ Often, the elements of an array are originally unknown, but its size is known. H
 %================================================================%
 The function zeros creates an array full of zeros, the function ones creates an array full of ones, and the function empty creates an array whose initial content is random and depends on the state of the memory. By default, the dtype of the created array is float64.
 \begin{verbatim}
->>> zeros( (3,4) )
+ zeros( (3,4) )
 array([[0.,  0.,  0.,  0.],
        [0.,  0.,  0.,  0.],
        [0.,  0.,  0.,  0.]])
->>> ones( (2,3,4), dtype=int16 )                # dtype can also be specified
+ ones( (2,3,4), dtype=int16 )                # dtype can also be specified
 array([[[ 1, 1, 1, 1],
         [ 1, 1, 1, 1],
         [ 1, 1, 1, 1]],
        [[ 1, 1, 1, 1],
         [ 1, 1, 1, 1],
         [ 1, 1, 1, 1]]], dtype=int16)
->>> empty( (2,3) )
+ empty( (2,3) )
 array([[  3.73603959e-262,   6.02658058e-154,   6.55490914e-260],
        [  5.30498948e-313,   3.14673309e-307,   1.00000000e+000]])
 \end{verbatim}
 To create sequences of numbers, NumPy provides a function analogous to range that returns arrays instead of lists
->>> arange( 10, 30, 5 )
+ arange( 10, 30, 5 )
 array([10, 15, 20, 25])
->>> arange( 0, 2, 0.3 )                 # it accepts float arguments
+ arange( 0, 2, 0.3 )                 # it accepts float arguments
 array([ 0. ,  0.3,  0.6,  0.9,  1.2,  1.5,  1.8])
 When arange is used with floating point arguments, it is generally not possible to predict the number of elements obtained, due to the finite floating point precision. For this reason, it is usually better to use the function linspace that receives as an argument the number of elements that we want, instead of the step:
 
 %================================================================%
 \begin{verbatim}
->>> linspace( 0, 2, 9 )                 # 9 numbers from 0 to 2
+ linspace( 0, 2, 9 )                 # 9 numbers from 0 to 2
 array([ 0.  ,  0.25,  0.5 ,  0.75,  1.  ,  1.25,  1.5 ,  1.75,  2.  ])
->>> x = linspace( 0, 2*pi, 100 )        # useful to evaluate function at lots of points
->>> f = sin(x)
+ x = linspace( 0, 2*pi, 100 )        # useful to evaluate function at lots of points
+ f = sin(x)
 \end{verbatim}
 \textit{See also
 array, zeros, zeros_like, ones, ones_like, empty, empty_like, arange, linspace, rand, randn, fromfunction, fromfile}
-\newpage
+
 
 %================================================================%
-\section{Printing Arrays}
+###Printing Arrays}
 When you print an array, NumPy displays it in a similar way to nested lists, but with the following layout:
 the last axis is printed from left to right,
 the second-to-last is printed from top to bottom,
 the rest are also printed from top to bottom, with each slice separated from the next by an empty line.
 One-dimensional arrays are then printed as rows, bidimensionals as matrices and tridimensionals as lists of matrices.
 \begin{verbatim}
->>> a = arange(6)                         # 1d array
->>> print a
+ a = arange(6)                         # 1d array
+ print a
 [0 1 2 3 4 5]
->>>
->>> b = arange(12).reshape(4,3)           # 2d array
->>> print b
+
+ b = arange(12).reshape(4,3)           # 2d array
+ print b
 [[ 0  1  2]
  [ 3  4  5]
  [ 6  7  8]
  [ 9 10 11]]
->>>
->>> c = arange(24).reshape(2,3,4)         # 3d array
->>> print c
+
+ c = arange(24).reshape(2,3,4)         # 3d array
+ print c
 [[[ 0  1  2  3]
   [ 4  5  6  7]
   [ 8  9 10 11]]
@@ -486,10 +486,10 @@ One-dimensional arrays are then printed as rows, bidimensionals as matrices and 
 See below to get more details on reshape.
 If an array is too large to be printed, NumPy automatically skips the central part of the array and only prints the corners:
 \begin{verbatim}
->>> print arange(10000)
+ print arange(10000)
 [   0    1    2 ..., 9997 9998 9999]
->>>
->>> print arange(10000).reshape(100,100)
+
+ print arange(10000).reshape(100,100)
 [[   0    1    2 ...,   97   98   99]
  [ 100  101  102 ...,  197  198  199]
  [ 200  201  202 ...,  297  298  299]
@@ -501,5 +501,5 @@ If an array is too large to be printed, NumPy automatically skips the central pa
 %-----------------------------------------------------------------------------%
 To disable this behaviour and force NumPy to print the entire array, you can change the printing options using set_printoptions.
 \begin{verbatim}
->>> set_printoptions(threshold='nan')
+ set_printoptions(threshold='nan')
 \end{verbatim}
